--- a/1homework/register.html
+++ b/1homework/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>注册页面</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="/js/birthdays.js"></script>
 </head>
 <body>
