--- a/1homework/register.html
+++ b/1homework/register.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>注册页面</title>
+    <title>江科大作业renren.com登录注册页面</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="/js/birthdays.js"></script>
 </head>
-<body>
+<body id="syshome" class="login">
+    <div id="header">
+        <div id="navBar" class="site-nav rr">
+            <h1>
+                <img alt="人人网的logo" title="人人网 renren.com" src="/1homework/img/logo-big.jpg"
+            </h1>
+        </div>
+    </div>
     <h1 align=center>免费开通江科大账号</h1>
     <form method="post">
         <p>注册邮箱:
