--- a/1homework/register.html
+++ b/1homework/register.html
@@ -5,57 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>江科大作业renren.com登录注册页面</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="/js/birthdays.js"></script>
+    <script src="/js/birthdays.js" type="text/javascript" ></script>
 </head>
 <body id="syshome" class="login">
     <div id="header">
         <div id="navBar" class="site-nav rr">
-            <h1>
                 <img alt="人人网的logo" title="人人网 renren.com" src="/1homework/img/logo-big.jpg"
-            </h1>
+                <h1><font size="3" color="black"> 十秒找到你的所有朋友！（镇流平）</font></h1>
         </div>
     </div>
-    <h1 align=center>免费开通江科大账号</h1>
-    <form method="post">
-        <p>注册邮箱:
-            <input type="text" class=txt name="email"/>
-        </p>
-        <p>创建密码:
-            <input type="text" class=txt name="pwd"/>
-        </p>
-        <p>真实姓名:
-            <input type="text" class=txt size="12" maxlength="20" name="username"/>
-        </p>
-        <p>性&nbsp;&nbsp;&nbsp;&nbsp;别:
-            <input type="radio" name="性别" value="male"/> 男
-            <input type="radio" name="性别" value="male"/> 女
-        </p>
-        <tr>
-            <td>出生年份:</td>
-            <td>
-                <select size="1" name="year" id="year" style="width:65px" onfocus="years('year',new Date().getFullYear()),change_date()"onchange="change_date()"></select> 
-                <select size="1" name="month" id="month" style="width:40px" onfocus="months(),change_date()" onchange="change_date()"></select> 
-                <select size="1" name="date" id="date" style="width:40px" ></select>
-            </td>
-        </tr>
-        <p>我现在:
-            <select>
-                <option value="">江科大</option>
-                <option value="张家港">张家港</option>
-                <option value="东校区">东校区</option>
-                <option value="西校区">西校区</option>
-            </select>
-        </p>
-        <p>
-            <input type="submit" name="submit" value="提交" class=but/>
-        </p>
-        <div class="code-zone">
-            <span>验证码：</span>
-            <input type="text" maxlength="4" node-type="validate-code" required="required">
-            <img class="validateImg" alt="验证码" title="验证码" src="img\genimage.jpg" 
-            data-vcode="33324238656332346361663334656637323237633636373637643239666664336662393733333331313433303030303030303030303030303031363030323532373939572BEAEEC19A3F8386EA1D8E5F231C12"
-            <span class="changeImg" node-type="changeOther">换一张</span>
-        </div>
-    </form>
+    
+    <div id="body" class="bodyneed">
+        <h1>免费开通江科大人人网账号</h1>
+        <form method="post">
+            <h2>
+                <p>注册邮箱:
+                    <input type="text" class=txt name="email"/>
+                </p>
+                <p>创建密码:
+                    <input type="text" class=txt name="pwd"/>
+                </p>
+                <p>真实姓名:
+                    <input type="text" class=txt size="12" maxlength="20" name="username"/>
+                </p>
+                <p>性&nbsp;&nbsp;&nbsp;&nbsp;别:
+                    <input type="radio" name="性别" value="male"/> 男
+                    <input type="radio" name="性别" value="male"/> 女
+                </p>
+                <tr>
+                    <td>出生年份:</td>
+                    <td>
+                        <select size="1" name="year" id="year" style="width:65px" onfocus="years('year',new Date().getFullYear()),change_date()"onchange="change_date()"></select> 
+                        <select size="1" name="month" id="month" style="width:40px" onfocus="months(),change_date()" onchange="change_date()"></select> 
+                        <select size="1" name="date" id="date" style="width:40px" ></select>
+                    </td>
+                </tr>
+                <p>我现在:
+                    <select>
+                        <option value="">江科大</option>
+                        <option value="张家港">张家港</option>
+                        <option value="东校区">东校区</option>
+                        <option value="西校区">西校区</option>
+                    </select>
+                </p>
+                <p>
+                    <input type="submit" name="submit" value="提交" class=but/>
+                </p>
+                <div class="code-zone">
+                    <span>验证码：</span>
+                    <input type="text" maxlength="4" node-type="validate-code" required="required">
+                    <img class="validateImg" alt="验证码" title="验证码" src="img\genimage.jpg" 
+                    data-vcode="33324238656332346361663334656637323237633636373637643239666664336662393733333331313433303030303030303030303030303031363030323532373939572BEAEEC19A3F8386EA1D8E5F231C12"
+                    <span class="changeImg" node-type="changeOther">换一张</span>
+                </div>
+            </h2>
+        </form>  
+    </div>
+    
 </body>
 </html>
