have some content in class

--- a/1homework/register.html
+++ b/1homework/register.html
@@ -40,7 +40,7 @@
                         <select size="1" name="date" id="date" style="width:40px" ></select>
                     </td>
                 </tr>
-                <p>我现在:
+                <p>我现在在:
                     <select>
                         <option value="">江科大</option>
                         <option value="张家港">张家港</option>
