meimei shige da bendan 妹妹是个大笨蛋

--- a/2homework/index.html
+++ b/2homework/index.html
@@ -9,26 +9,42 @@
         .nav_item{
             width: 100px;
             height: 30px;
-            background: grey;
+            background: blue;
             color:white;
             text-align: center;
+            line-height: 30px;
+            border-bottom: solid 5px black;
+            display: inline-block;
+            padding: 8px 0px;
+        }
 
+        .sum_of_nav_item{
+            background:blue;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="nav_item">网站首页</div>
-    <div class="nav_item">新闻资讯</div>
-    <div class="nav_item">学校概况</div>
-    <div class="nav_item">组织机构</div>
-    <div class="nav_item">人才培养</div>
-    <div class="nav_item">科研工作</div>
-    <div class="nav_item">学科建设</div>
-    <div class="nav_item">招生就业</div>
-    <div class="nav_item">师资队伍</div>
-    <div class="nav_item">国际交流</div>
-    <div class="nav_item">校园文化</div>
+    <div class="sum_of_nav_item">
+        <div class="nav_item">网站首页</div>
+        <div class="nav_item">新闻资讯</div>
+        <div class="nav_item">学校概况</div>
+        <div class="nav_item">组织机构</div>
+        <div class="nav_item">人才培养</div>
+        <div class="nav_item">科研工作</div>
+        <div class="nav_item">学科建设</div>
+        <div class="nav_item">招生就业</div>
+        <div class="nav_item">师资队伍</div>
+        <div class="nav_item">国际交流</div>
+        <div class="nav_item">校园文化</div>
 
+    </div>
+
+    <div class="list_of_nav_item">
+        <li class="nLi">
+            <div class="sub" style="overflow: hidden; display: none;"></div>
+        </li>
+    </div>
 
     
 </body>
