--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -1,14 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../plugins/bootstrap-3.3.7-dist/css/bootstrap.css"
-</head>
+    <link rel="stylesheet" href="../plugins/bootstrap-3.3.7-dist/css/bootstrap.css" </head>
+
 <body>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#example-navbar-collapse">
+                    <span class="sr-only">切换导航</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">江苏科技大学</a>
+            </div>
+            <div class="collapse navbar-collapse" id="example-navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active"><a href="#">The new one</a></li>
+                    <li><a href="#">The new two</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            The new three <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu navbar-right">
+                            <li><a href="#">jmeter</a></li>
+                            <li><a href="#">EJB</a></li>
+                            <li><a href="#">just soso</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">分离的链接</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">又是一个分离的链接</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">江苏科技大学</a>
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">背景加深的IOS</a></li>
+                <li><a href="#">背景不加深的IOS</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        Java
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">C++</a></li>
+                        <li><a href="#">C#</a></li>
+                        <li><a href="#">julia</a></li>
+                        <li><a href="#">rust</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">分离式链接</a></li>
+                        <li><a href="#">j++</a></li>
+                        <li><a href="#">matlab</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">另外一个分离式链接</a></li>
+                        <li><a href="p++p"></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav> -->
+
     <script src="../plugins/jquery/jquery.min.js"></script>
     <script src="../plugins/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 
 </body>
+
 </html>
