--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -28,7 +28,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             The new three <b class="caret"></b>
                         </a>
-                        <ul class="dropdown-menu navbar-right">
+                        <ul class="dropdown-menu">
                             <li><a href="#">jmeter</a></li>
                             <li><a href="#">EJB</a></li>
                             <li><a href="#">just soso</a></li>
@@ -39,6 +39,34 @@
                         </ul>
                     </li>
                 </ul>
+                <form class="navbar-form navbar-left" role="search">
+                    <button type="submit" class="btn btn-default">
+                        一种尝试
+                    </button>
+                </form>
+                <p class="navbar-text navbar-left">向左对齐</p>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Java <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">jmeter</a></li>
+                            <li><a href="#">EJB</a></li>
+                            <li><a href="#">javascript</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">分离的链接</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">另外一个分离的链接</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="navbar-form navbar-right" role="search">
+                    <button type="submit" class="btn btn-default">
+                        向右对齐-提交按钮
+                    </button>
+                </form>
+                <p class="navbar-text navbar-right">向右对齐-文本</p>
             </div>
         </div>
     </nav>
