--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -22,33 +22,17 @@
             </div>
             <div class="collapse navbar-collapse" id="example-navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
-                    <li class="active"><a href="#">The new one</a></li>
-                    <li><a href="#">The new two</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            The new three <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">jmeter</a></li>
-                            <li><a href="#">EJB</a></li>
-                            <li><a href="#">just soso</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">分离的链接</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">又是一个分离的链接</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Micorsoft 365</a></li>
+                    <li><a href="#">Office</a></li>
+                    <li><a href="#">Windows</a></li>
+                    <li><a href="#">Surface</a></li>
+                    <li><a href="#">Xbox</a></li>
+                    <li><a href="#">支持</a></li>
                 </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <button type="submit" class="btn btn-default">
-                        一种尝试
-                    </button>
-                </form>
-                <p class="navbar-text navbar-left">向左对齐</p>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Java <b class="caret"></b>
+                            所有Microsoft <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">jmeter</a></li>
@@ -61,12 +45,21 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <button type="submit" class="btn btn-default">
-                        向右对齐-提交按钮
-                    </button>
-                </form>
-                <p class="navbar-text navbar-right">向右对齐-文本</p>
+                
+                <!-- <li class="dropdown navbar-right">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        The new three <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">jmeter</a></li>
+                        <li><a href="#">EJB</a></li>
+                        <li><a href="#">just soso</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">分离的链接</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">又是一个分离的链接</a></li>
+                    </ul>
+                </li> -->
             </div>
         </div>
     </nav>
