--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4homework</title>
     <link rel="stylesheet" href="../plugins/bootstrap-3.3.7-dist/css/bootstrap.css" </head>
 
 <body>
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar navbar-default" role="navigation" style="color: rgba(0, 0, 0, 0.5); background-color: #ffffff !important">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse"
