--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
         crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css">
 <body>
     <nav class="navbar navbar-default" role="navigation" style="color: rgba(0, 0, 0, 0.5); background-color: #ffffff !important">
         <div class="container-fluid">
@@ -63,6 +64,31 @@
             </div>
         </div>
     </nav>
+    <div id="myCarousel" class="carousel slide">
+        <!-- 轮播（Carousel）指标 -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+        </ol>
+        <!-- 轮播（Carousel）项目 -->
+        <div class="carousel-inner control">
+            <div class="item active">
+                <img src="images/product1.png" alt="First slide">
+            </div>
+            <div class="item">
+                <img src="images/product2.png" alt="Second slide">
+            </div>
+        </div>
+        <!-- 轮播（Carousel）导航 -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
 
     <script src="../plugins/jquery/jquery.min.js"></script>
