添加了ico——西湖美景

--- a/4homework/4homework/index.html
+++ b/4homework/4homework/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/sidajiekong.ico" type="image/x-icon">
 <body>
     <nav class="navbar navbar-default" role="navigation" style="color: rgba(0, 0, 0, 0.5); background-color: #ffffff !important">
         <div class="container-fluid">
