some changes not notify

--- a/yt/web-homework/3/操作表格/index copy.html
+++ b/yt/web-homework/3/操作表格/index copy.html
@@ -13,7 +13,18 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <div id="table-area"></div>
-    <script src="./js/index.js" type="module"></script>
+    <div id="table-area">
+      <div class="table-top-toolbar top bottom">
+        <input type="text" class="btn-add-row" > 
+      </div>
+      <div class="table-toolbar top bottom" class="btn-add-row">
+        <input type="text">
+      </div>
+
+      <div class="table-wrapper header content">
+        <table></table>
+      </div>
+    </div>
+    <!-- <script src="./js/index.js" type="module"></script> -->
   </body>
 </html>
